<?xml version="1.0"?>
<package format="2">

  <name>anyrobot_ros_examples</name>
  <version>1.0.0</version>
  
  <description>Any Robot ROS Examples</description>
  <maintainer email="support@dragandbot.com">Support</maintainer>

  <license>Copyright drag and bot GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>robot_movement_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>robot_movement_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>